fix footer contrast

--- a/themes/soshellofriend/assets/css/footer.css
+++ b/themes/soshellofriend/assets/css/footer.css
@@ -17,7 +17,7 @@
   }
 
   a {
-    color: inherit;
+    color: var(--color);
   }
 
   .copyright {
